syntax = "proto3";

package health;

option go_package = ".;health"; 

service HealthService {
  rpc UploadReport(UploadReportRequest) returns (UploadReportResponse);
  rpc ClaimReport(ClaimReportRequest) returns (ClaimReportResponse);
  rpc ReadReport(ReadReportRequest) returns (ReadReportResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Register(ReadReportRequest) returns (ReadReportResponse);
}

message UploadReportRequest {
  string report_id = 1;
  string patient_hash = 2;
  string test_results_json = 3;
}


message UploadReportResponse {
    bool success = 1;
    string message = 2;
}

message ClaimReportRequest {
  string report_id = 1;
}

message ClaimReportResponse {
  bool success = 1;
  string message = 2;
}

message ReadReportRequest {
  string report_id = 1;
}

message ReadReportResponse {
  bool success = 1;
  string report_content = 2;
}


message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
    bool success = 1;
    string message = 2;
}

message RegisterRequest {
  string username = 1;
  string password = 2;
}

message RegisterResponse {
    bool success = 1;
    string message = 2;
}