package main

import (
	"context"
	"fmt"
	"log"
	"net"
	"net/http"

	db "go_server/database"
	fc "go_server/fabric"
	pb "go_server/proto"
	sc "go_server/service"
	wl "go_server/wallet"

	"github.com/grpc-ecosystem/grpc-gateway/v2/runtime"

	"google.golang.org/grpc"
	"google.golang.org/grpc/credentials/insecure"
	"google.golang.org/protobuf/types/known/emptypb"

)

type server struct {
	pb.UnimplementedHealthServiceServer
	Wallet  *wl.Wallet // â† æ³¨å…¥
	Builder fc.GWBuilder
}

// UploadReport
func (s *server) UploadReport(ctx context.Context, req *pb.UploadReportRequest) (*pb.UploadReportResponse, error) {
	return sc.HandleUploadReport(ctx, req, s.Wallet, s.Builder)
}

// Login
func (s *server) Login(ctx context.Context, req *pb.LoginRequest) (*pb.LoginResponse, error) {
	return sc.HandleLogin(ctx, req, s.Wallet)
}

// å¯¦ç¾æ–°çš„è¨»å†Šæ–¹æ³•
func (s *server) RegisterUser(ctx context.Context, req *pb.RegisterUserRequest) (*pb.RegisterResponse, error) {
	return sc.HandleRegisterUser(ctx, req, s.Wallet)
}

func (s *server) RegisterInsurer(ctx context.Context, req *pb.RegisterInsurerRequest) (*pb.RegisterResponse, error) {
	return sc.HandleRegisterInsurer(ctx, req, s.Wallet)
}



// æ–°å¢ ListMyReportMeta API æ–¹æ³•
func (s *server) ListMyReportMeta(ctx context.Context, in *emptypb.Empty) (*pb.ListMyReportMetaResponse, error) {
	log.Printf("[Debug] ListMyReportMeta")
	return sc.HandleListMyReportMeta(ctx, in, s.Wallet, s.Builder)
}

// æ–°å¢ ReadMyReport API æ–¹æ³•
func (s *server) ReadMyReport(ctx context.Context, req *pb.ReadMyReportRequest) (*pb.ReadMyReportResponse, error) {
	return sc.HandleReadMyReport(ctx, req, s.Wallet, s.Builder)
}

// æ–°å¢ RequestAccess API æ–¹æ³•
func (s *server) RequestAccess(ctx context.Context, req *pb.RequestAccessRequest) (*pb.RequestAccessResponse, error) {
	return sc.HandleRequestAccess(ctx, req, s.Wallet, s.Builder)
}

// æ–°å¢ ListAccessRequests API æ–¹æ³•
func (s *server) ListAccessRequests(ctx context.Context, in *emptypb.Empty) (*pb.ListAccessRequestsResponse, error) {
	return sc.HandleListAccessRequests(ctx, in, s.Wallet, s.Builder)
}

// æ–°å¢ ApproveAccessRequest API æ–¹æ³•
func (s *server) ApproveAccessRequest(ctx context.Context, req *pb.ApproveAccessRequestRequest) (*pb.ApproveAccessRequestResponse, error) {
	return sc.HandleApproveAccessRequest(ctx, req, s.Wallet, s.Builder)
}

// æ–°å¢ RejectAccessRequest API æ–¹æ³•
func (s *server) RejectAccessRequest(ctx context.Context, req *pb.RejectAccessRequestRequest) (*pb.RejectAccessRequestResponse, error) {
	return sc.HandleRejectAccessRequest(ctx, req, s.Wallet, s.Builder)
}



// æ–°å¢ ListAuthorizedReports API æ–¹æ³•
func (s *server) ListAuthorizedReports(ctx context.Context, in *emptypb.Empty) (*pb.ListAuthorizedReportsResponse, error) {
	return sc.HandleListAuthorizedReports(ctx, in, s.Wallet, s.Builder)
}

// æ–°å¢ ListReportMetaByPatientID API æ–¹æ³•
func (s *server) ListReportMetaByPatientID(ctx context.Context, req *pb.PatientIDRequest) (*pb.ListReportMetaResponse, error) {
	return sc.HandleListReportMetaByPatientID(ctx, req, s.Wallet, s.Builder)
}

func (s *server) ViewAuthorizedReport(ctx context.Context, req *pb.ViewAuthorizedReportRequest) (*pb.ViewAuthorizedReportResponse, error) {
	return sc.HandleViewAuthorizedReport(ctx, req, s.Wallet, s.Builder)
}

func (s *server) ListMyAccessRequests(ctx context.Context, in *emptypb.Empty) (*pb.ListMyAccessRequestsResponse, error) {
	return sc.HandleListMyAccessRequests(ctx, in, s.Wallet, s.Builder)
}

func (s *server) ListMyAuthorizedTickets(ctx context.Context, in *emptypb.Empty) (*pb.ListAuthorizedTicketsResponse, error) {
	return sc.HandleListMyAuthorizedTickets(ctx, in, s.Wallet, s.Builder)
}

func main() {
	err := db.InitDB("database/user_data.sqlite")
	if err != nil {
		log.Fatalf("âŒ SQLite åˆå§‹åŒ–å¤±æ•—: %v", err)
	}

	w := wl.New()

	// â‘¢ å»º PeerConnector (åªåšä¸€æ¬¡)
	log.Println("ğŸ”— æ­£åœ¨é€£æ¥åˆ° Peer ç¯€é»...")
	peer, err := fc.NewPeer(
		"localhost:7051",
		"../orgs/org1.example.com/peers/peer1.org1.example.com/tls/ca.crt",
		"peer1.org1.example.com",
	)

	if err != nil {
		log.Fatalf("âŒ Peer é€£ç·šå¤±æ•—: %v", err)
	}
	log.Println("âœ… Peer é€£ç·šæˆåŠŸå»ºç«‹")

	// â‘£ å»º Gateway Builder
	builder := fc.GWBuilder{
		Peer:    peer,
		Channel: "channel1",
		CCName:  "health",
	}

	// æ¸¬è©¦Gatewayé€£ç·š
	log.Println("ğŸ§ª æ¸¬è©¦ Gateway é€£ç·š...")
	if err := testGatewayConnection(builder, w); err != nil {
		log.Printf("âš ï¸ Gateway é€£ç·šæ¸¬è©¦å¤±æ•—: %v", err)
	} else {
		log.Println("âœ… Gateway é€£ç·šæ¸¬è©¦æˆåŠŸ")
	}

	go startGrpcServer(w, builder) // é–‹ gRPC server
	startHttpGatewayServer()       // é–‹ gRPC-Gateway server (HTTP server)
}

// æ·»åŠ Gatewayé€£ç·šæ¸¬è©¦å‡½æ•¸
func testGatewayConnection(builder fc.GWBuilder, wallet *wl.Wallet) error {
	// å˜—è©¦ä½¿ç”¨ç¾æœ‰çš„ç”¨æˆ¶èº«ä»½æ¸¬è©¦é€£ç·š
	entries, err := wallet.List()
	if err != nil {
		return fmt.Errorf("ç„¡æ³•åˆ—å‡ºéŒ¢åŒ…æ¢ç›®: %w", err)
	}
	if len(entries) == 0 {
		log.Println("âš ï¸ éŒ¢åŒ…ä¸­æ²’æœ‰ç”¨æˆ¶èº«ä»½ï¼Œè·³éGatewayæ¸¬è©¦")
		return nil
	}

	// ä½¿ç”¨ç¬¬ä¸€å€‹ç”¨æˆ¶èº«ä»½æ¸¬è©¦
	userID := entries[0]
	entry, _ := wallet.Get(userID)
	
	contract, gw, err := builder.NewContract(entry.ID, entry.Signer)
	if err != nil {
		return fmt.Errorf("ç„¡æ³•å»ºç«‹Gateway: %w", err)
	}
	defer gw.Close()

	// å˜—è©¦è©•ä¼°ä¸€å€‹ç°¡å–®çš„chaincodeå‡½æ•¸
	_, err = contract.EvaluateTransaction("ListMyReportMeta")
	if err != nil {
		return fmt.Errorf("chaincode èª¿ç”¨å¤±æ•—: %w", err)
	}

	return nil
}

func startGrpcServer(wallet *wl.Wallet, builder fc.GWBuilder) {
	lis, err := net.Listen("tcp", ":50051")
	if err != nil {
		log.Fatalf("failed to listen: %v", err)
	}

	grpcServer := grpc.NewServer()
	pb.RegisterHealthServiceServer(grpcServer, &server{Wallet: wallet, Builder: builder})

	log.Println("gRPC server is running at :50051")
	if err := grpcServer.Serve(lis); err != nil {
		log.Fatalf("failed to serve: %v", err)
	}
}

func allowCORS(h http.Handler) http.Handler {
	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
		origin := r.Header.Get("Origin")
		if origin != "" {
			// åªå…è¨±ç‰¹å®š Originï¼Œä¸è¦å…¨éƒ¨ "*"
			w.Header().Set("Access-Control-Allow-Origin", origin)
			w.Header().Set("Access-Control-Allow-Methods", "GET, POST, PUT, DELETE, OPTIONS")
			w.Header().Set("Access-Control-Allow-Headers", "Content-Type, Authorization")
			w.Header().Set("Access-Control-Allow-Credentials", "true")
		}

		// å¦‚æœæ˜¯é æª¢è«‹æ±‚ (OPTIONS)ï¼Œç›´æ¥è¿”å› 200ï¼Œä¸ç„¶è«‹æ±‚æœƒè¢«æ“‹
		if r.Method == http.MethodOptions {
			w.WriteHeader(http.StatusOK)
			return
		}

		h.ServeHTTP(w, r)
	})
}

func startHttpGatewayServer() {
	ctx := context.Background()
	ctx, cancel := context.WithCancel(ctx)
	defer cancel()

	mux := runtime.NewServeMux()
	opts := []grpc.DialOption{grpc.WithTransportCredentials(insecure.NewCredentials())}

	err := pb.RegisterHealthServiceHandlerFromEndpoint(ctx, mux, "localhost:50051", opts)
	if err != nil {
		log.Fatalf("failed to start HTTP gateway: %v", err)
	}

	// ğŸ¯ åŠ ä¸Š CORS handler
	handler := allowCORS(mux)

	log.Println("HTTP server listening at :8080")
	if err := http.ListenAndServe(":8080", handler); err != nil {
		log.Fatalf("failed to serve HTTP: %v", err)
	}
}

/*
func testUploadClaimRead(contract *client.Contract) {
	testResults := map[string]string{
		"Glu-AC": "95 mg/dL",
		"HbA1c":  "5.3 %",
		"LDL-C":  "125 mg/dL",
	}
	testJSON, _ := json.Marshal(testResults)

	fmt.Println("Submitting UploadReport transaction...")
	_, err := contract.SubmitTransaction("UploadReport", "report001", "patientHash123", string(testJSON))
	if err != nil {
		fc.PrintGatewayErrorDetails(err)
		log.Fatalf("Failed to submit UploadReport transaction: %v", err)
	}
	fmt.Println("âœ… Report uploaded successfully")

	fmt.Println("Submitting ClaimReport transaction...")
	_, err = contract.SubmitTransaction("ClaimReport", "report001")
	if err != nil {
		log.Fatalf("Failed to claim report: %v", err)
		fc.PrintGatewayErrorDetails(err)
	}
	fmt.Println("âœ… Claimed successfully")

	fmt.Println("Evaluating ReadReport transaction...")
	result, err := contract.EvaluateTransaction("ReadReport", "report001")
	if err != nil {
		log.Fatalf("Failed to read report: %v", err)
	}
	fmt.Println("ğŸ“„ Report:")
	fmt.Println(string(result))
}
*/
